feat: Implement drag and drop game logic
This commit introduces the core game logic for the shape matching game. It includes:

- A `Game` class to manage the game state, score, and event handling.
- Drag and drop functionality for shapes.
- Dynamic board rendering based on available shapes.
- Score tracking and win condition.
- A shuffle utility function to randomize dropzone order.
- Updated styles to reflect the new game elements.
- Refactored main.js to initialize and start the game.

--- a/index.html
+++ b/index.html
@@ -21,24 +21,12 @@
     <title>Shape Match</title>
   </head>
   <body>
-    <div id="app">
-      <header class="header">
-        <i class="ph ph-shapes"></i>
-        <h1>Shape Match</h1>
-      </header>
+    <header class="header">
+      <i class="ph ph-shapes"></i>
+      <h1>Shape Match</h1>
+    </header>
 
-      <main class="container">
-        <div class="row">
-          <div data-shape="circle" class="dropzone"></div>
-          <div data-shape="square" class="dropzone"></div>
-        </div>
-
-        <div class="row">
-          <div id="square" draggable="true" class="shape"></div>
-          <div id="circle" draggable="true" class="shape"></div>
-        </div>
-      </main>
-    </div>
+    <div id="app" class="container"></div>
 
     <script type="module" src="/src/main.js"></script>
   </body>
